# shift

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: ast.h  builder.h  compiler.h  environment.h  generator.h  lexer.h  operators.h  parser.h  position.h  token.h  types.h  utils.h
include/analyzer/: base.h  symbols.h
include/ast/: ast.h  base.h  control.h  functions.h  literals.h  visitor.h
include/generator/: base.h
include/lexer/: base.h  token.h
include/parser/: base.h  printer.h
src/: ast.cpp  compiler.cpp  lexer.cpp  main.cpp  parser.cpp  token.cpp  utils.cpp
src/analyzer/: base.cpp  symbols.cpp
src/ast/: base.cpp  visitor.cpp
src/generator/: base.cpp
src/lexer/: base.cpp  token.cpp
src/parser/: base.cpp  printer.cpp
